添加了influxdb读写服务的三个接口: 1.根据chanID等参数查询数据 2.查询最后一条chanIDs对应的记录 3.查询指定多个chanIDs及时间段泵站的总开启时间
